8_security_mtls/deployment/destinationrule.yaml
apiVersion: "networking.istio.io/v1alpha3"
kind: "DestinationRule"
metadata:
  name: "default"
spec:
  host: "*.servicemesh-mtls.svc.cluster.local"
  trafficPolicy:
    tls:
      mode: ISTIO_MUTUAL
